REFRESH: Pages for 2017S

--- a/a1.md
+++ b/a1.md
@@ -1,31 +1,71 @@
-# A1: Thinking About Design
+# A1: Introduction to WPF
 
-To complete this assignment, you need to have a very critical and reflective perspective in your everyday life. Your job is to "think like a designer," and experience the world while being cognizant of how it was designed. Pay attention to everything that you interact with -- the alarm clock that wakes you up, the schedule that you look at to catch the bus, the feel of the doorknob as you leave your house, the ways in which doors open, the interface of your phone as you receive messages or type new messages, etc. What things work well? What things don't work well? Then, consider why does it work well? Does it match your expectations? Is it because you know how from experience, or because you made lots of mistakes in the past? Are there things that don't work well, but you've constructed a workaround for it (for example: creating a path through a field, because the walkway takes a circuitous route)?
+You are given a specification and a final design of some basic UI elements. Your job is to write the code to fulfill the specifications and produce something similar (or the same) as the given design. 
 
-Warning: as soon as you start thinking in this way, the whole world will seem very poorly designed. Actually, the funny thing is that it really is, but humans are very adaptable, so we soon forget.
+## Learning Objectives
 
-## Deliverable
+By the end of this assignment, you will:
 
-The deliverable is a written report.
+* Implement a small user interface conforming to a design.
+* Practice developing basic UI elements and event handling. 
+* Practice development and debugging in the Visual Studio IDE.
+* Practice development with C# and WPF.
 
-## Written Report
+## Deliverable / Submission
 
-The written report should have three sections:
+You will deliver a .zip file containing your source code into the Dropbox in D2L.
 
-**Breadth**. Describe 10 interactions you have had with things in your everyday life. In a paragraph, describe this interaction in detail, discussing whether it was successful or not. In what ways was it successful? In what ways was it poor? Why was it poor? What workarounds did you come up with to overcome these problems? Note that it is best to keep a small notebook with you so that you can record these in detail as you go about your life. Trying to recall them in the evening or several days later will be difficult and lack the clarity and richness of recording it in the moment.
+1. From the project directory, remove the `bin\` and `obj\` folders
+2. Zip up the solution directory, ensuring that all your source files are included
+3. Upload the zip file into the Dropbox in D2L by the deadline
 
-**Principles**. Based on intuition, or perhaps the examples you provided in the previous step, identify 5 design principles that you could attribute both a good experience and bad experience to. Provide a brief description of what this principle means, and how it applies to one or more of the examples from the previous step. For example, in class, I used the example of the washroom sign. This was an example of the principle of *inconsistency* since the sign indicated the washroom would be on one side when it was on the other.
+We will extract your code and run it looking to see if the design matches the specifications below.
 
-**Artifacts**. Find one thing (or program) that you love to interact with, and one thing that you hate to interact with. Describe each in detail, along with what aspects of it make it pleasurable or enjoyable to use, or what aspects of it that make it absolutely awful to use. Use the design principles that you described in the previous section, and discuss whether your artifacts meet or break these criteria.
+## Steps
 
-Your report should be roughly 3-4 pages long. Make sure to use headers to delineate the different sections of the report. This report is to be single-spaced, double-sided. Use 12-pt Times font with 1" margin on all sides.
+1. Read through the documentation below
+2. Create a new C#/WPF application following the description. 
+4. Zip it up, and submit via D2L.
+
+## Description
+
+Your job is to implement the design given in the solution video below, following the specifcations listed in the next section. 
+
+[](https://youtu.be/Dgcr1xbzUTw)
+
+## Specifications
+
+To match this solution you must have:
+
+1. A label with the content "Hello World" in font "Harlow Solid Italic" (or something else fun!) and in a different colour (blue in the solution but any colour but black also works).
+2. A slider control that changes the alpha value of the "Hello World" label (regardless of the colour) when the slider value is changed.
+3. A button with a different boarder and text colour. (Green and red in the video). The button changes the colour of the "Hello World" label when it is clicked. And changes the colour back on the second click. The button also changes the colour of the button boarded and text colour when it is clicked, then changes back on the second click. 
+
+## Tutorial Video
+
+[](https://www.youtube.com/watch?v=ZG7Zbu2S6gM)
+
+This tutorial video covers how to create a shell of a WPF project, and covers the basics on how to implement event handlers for various UI controls in WPF.
+
+## Hints
+
+1. Take notes based on the requirements and specification above. Make your own shorthand that is easier to interpret for you (rather than having to read the whole text). A good idea for this class is to make a sketch of where the project is going. 
+2. Look through C# and WPF documentation for a better understanding on how to create UI applications in Visual Studio. Here are some tutorials you can browse through:
+	- https://www.codeproject.com/Articles/140611/WPF-Tutorial-Beginning
+	- http://www.wpf-tutorial.com
+	- https://www.tutorialspoint.com/wpf/wpf_hello_world.htm
+3. Work on the "normal" cases first before worrying about making your UI look the exact same. (Though, ultimately, make sure you adhere to the specification above!)
 
 ## Grading Rubric
 
-The grading rubric for this assignment is here: [481-A1-grading-rubric.pdf](http://www.hcitang.org/uploads/Teaching/481-A1-grading-rubric.pdf)
+You work will be graded on a 0, check-, check and check+ grade. 
 
-Print and staple this to the front of your assignment.
+A check grade is awarded when all the specifications above have been met. 
+
+A check- grades is received when some requirements from the specifications are missing or implemented incorrectly. 
+
+A check+ grade can be recieved if you meet all the specifications plus some "interesting" stretch goal. For instance, if you add a new UI control and meaningfully control the ouput, this would be considered a check+ grade (assuming the main requirements are fulfilled).
 
 ## No Late Assignments
 
-Your assignment is due at the beginning of lecture on the due date. You have a 10 minute grace period after the start of lecture. After this, no late assignments will be accepted.
+Your assignment is due at noon on the specified due date. No late assignments will be accepted.
