--- a/p1.md
+++ b/p1.md
@@ -7,20 +7,31 @@ This project component focuses on employing methods for understanding your poten
 ## Major Activities
 * **Identify your project idea.** Succinctly describe the nature of the project, how you expect your system to be used, by whom, and the context under which you expect it to be used.
 * **Identify stakeholders and users.** Figure out who is impacted (in one way or another) by this system -- these are stakeholders. Note that stakeholders and users overlap, but are not always the same. For example, the primary users of self-checkout at a grocery store are customers, but cashiers still make use of the system, and the owner of a grocery store (who is likely paying for its installation) is someone who cares about the system, too. Create a list of these stakeholders, and describe them (particularly the users) in terms of: how much training/experience they might have, their background knowledge, etc.
-* **Conduct three user research methods.** Select three user research methods from the methods we covered in class (or are in the IDEO cards) that complement one another. Justify your choice of each of these research methods in terms of why they are appropriate for your context. Conduct the methods with potential users and/or stakeholders. Make notes about your experience conducting these methods: what are your users' problems, what is their context of use, what would they like to do, etc.? Consider issues of what the use context will be (e.g. typical situations). Summarize your method, and your findings from each of these methods.\\
+* **Conduct three user research methods.** Select three user research methods from the list below in such a way that they complement one another. Justify your choice of each of these research methods in terms of why they are appropriate for your context. Conduct the methods with potential users and/or stakeholders. Make notes about your experience conducting these methods: what are your users' problems, what is their context of use, what would they like to do, etc.? Consider issues of what the use context will be (e.g. typical situations). Summarize your method, and your findings from each of these methods.\\
 \\
-Since this is a class project, you need not to necessarily interview as many users as suggested in the literature; instead, focus on selecting good techniques, and learning something from their application. If you're not sure, talk to me long before the deadline.
-* **Develop a set of task descriptions.** What will people use your system for? Develop these task descriptions in accordance to task-centred design methodology.
+Since this is a class project, you need not necessarily interview as many users as suggested in the literature; instead, focus on selecting good techniques, and learning something from their application. If you're not sure, talk to me long before the deadline.
+* **Identify and develop a set of task descriptions.** What will people use your system for? Develop these task descriptions in accordance to [task-centred design methodology](http://grouplab.cpsc.ucalgary.ca/grouplab/uploads/Publications/Publications/2004-TaskAnalysis.LEAChapter.pdf).
 
 ## Deliverable
-* Turn in a written summary document in your portoflio binder (along with the appropriate grading sheet on top). This should be a single spaced, double sided, 12 pt Times Roman document with 1" margins. Sections should be clearly labeled for each activity in this project component. This should be handed in at the **beginning of the class** on the day it is due. **As with assignments, you have a 10 minute window from the start of class -- handing it in after this 10 minute window will result in a grade of 0.**
-* Provide the following: (a) a succinct description of your project idea, how you expect your system to be used, by whom, and the context under which you expect it to be used; (b) provide a list of stakeholders, and describe them as they relate to the design of the system; (c) discuss the user research methods you used, provide justification for them, and provide a summary of your findings from each of these methods, and (d) provide 6-8 task descriptions of how you expect the system to be used.
-* As a rough guideline, this assignment should result in a 6-8 physical page document. The maximum is 10 pages.
-* You should also provide an appendix of any materials used in your user research to serve as **proof that you conducted the research methods**. Note that these do not count against your page count, and do not need to be formatted nicely. Examples could include (but are not limited to): photos of you and your interviewee, interview questions, raw notes from observations, photos from ethnography, survey questions, etc.
+* You deliver this project component via your GitHub repo as a working webpage. This webpage should illustrate your methods using images and visuals captured during your user research.
+* Provide the following: (a) a succinct description of your project idea, how you expect your system to be used, by whom, and the context under which you expect it to be used; (b) provide a list of stakeholders, and describe them as they relate to the design of the system; (c) discuss the user research methods you used, provide justification for them, and provide a summary of your findings from each of these methods; (d) reflect on your use of the methods -- what went well, what went poorly, and what would you do differently, and (e) provide 6-8 task descriptions of how you expect the system to be used.
+* As a very rough guideline, this assignment should result in a 2000 word document.
+* You should also provide links to any materials used in your user research to serve as **proof that you conducted the research methods**. Examples could include (but are not limited to): photos of you and your interviewee, interview questions, raw notes from observations, photos from ethnography, survey questions, etc. If appropriate, using images of these in your write-up would likely be a good idea.
 
-## Grading Sheet
-* Ensure that your grading sheet is placed in front of the section of this component.
-* Look on the [grading sheet page](project-grading-sheets.md) for the printable grading sheet.
+## Rubric
+* Look on the [grading sheet page](project-grading-sheets.md) to understand how you are being assessed.
+
+## Potential Research Methods
+* Interview
+* Rapid ethnography
+* Observation (fly on the wall)
+* Survey
+* Shadowing (focusing on interactions with tools)
+* Extreme user interviews
+* Secondary research (identify issues with current tools, and what your approach will do differently)
+* Camera journal
+* Try it yourself
+* Empathy tools
 
 <!-- 
 ## Resources
