--- a/p3.md
+++ b/p3.md
@@ -4,31 +4,33 @@ In P2, you developed a wide space of ideas, and focused on developing a number o
 
 At some point, your customers are going to want to see a more tangible prototype. These are ways that you can develop prototypes to not only understand what the resulting system may look like, but also what it feels like to interact with. Using these prototypes, you could easily evaluate your interface with users, understanding what aspects of the interaction works well, and what doesn't. These "quick and dirty" prototyping methods allow you to get that idea without expending the major effort that is required to develop a prototype using code. You were able to get a taste of this by building your video prototype.
 
-For this project component, you will actually develop a prototype of your system in Java. You should develop a deep vertical prototype that addresses all the "must have" tasks you identified in P1, and refined in P2. Your prototype should follow the design ideas you identified and storyboarded in P2, but only to the extent that it makes sense. If you discover that an alternate idea/design works better, feel free to implement this; however, you will need to be clear about this modification, and justify it for both P3 and P4.
+For this project component, you will actually develop a prototype of your system using a high-fidelity prototyping tool. You should develop a deep vertical prototype that addresses all the "must have" tasks you identified in P1, and refined in P2. Your prototype should follow the design ideas you identified and storyboarded in P2, but only to the extent that it makes sense. If you discover that an alternate idea/design works better, feel free to implement this; however, you will need to be clear about this modification, and justify it for both P3 and P4.
 
 In practice, you could now demo the system and conduct usability or feedback sessions with potential users. This is often time consuming and expensive, so you may need a method to evaluate the usability of your interface that gets you results without having to involve users. One of these methods is to conduct a Heuristic Evaluation. Your job is to conduct a heuristic evaluation, and report on the main findings.
 
 ## Major Activities
-* **Build a vertical prototype.** Using Java, build a vertical prototype that addresses all of the "must have" task requirements you identified in P1. This prototype should be functional: not only in that the interface appears correct, but that the core functionality actually works the way that it is intended. The goal, remember, is to allow someone to understand how it would feel to interact with the system. 
+* **Build a vertical prototype.** Using Axure, build a vertical prototype that addresses all of the "must have" task requirements you identified in P1. This prototype should be functional in terms of the interaction flow. The goal, remember, is to allow someone to understand how it would feel to interact with the system. 
 
-Note: This is a little bit tricky. PLEASE ask your TA about how much functionality is appropriate. We are not interested, for example, in having you build a whole back-end system w/ SQL Server (use a flat file); however, it should not be completely mocked up.
+Note: This is a little bit tricky. PLEASE ask your TA about how much functionality is appropriate.
 
 * **Demo your system.** You will demo your system to your TA and your fellow classmates in your tutorial section. Think carefully about how to demo the interaction of your system. You have 10 minutes to do your demo, and will need to answer questions from the class and your TA for 5 minutes.
 * **Conduct a heuristic analysis.** You will conduct an heuristic evaluation of your system as outlined in class. Each member of your deep dive team will use the heuristics, and **individually** make his/her way through the interface, identifying when some aspect of the interface violates one of the heuristics. It is important that this step is conducted independently. You will then meet as a team, and again walk through the interface, discussing each of the problems that you all identified. Your goal is to identify major problem areas of your interface through this method, what heuristic(s) have been violated to cause these problems, the severity of the problem, and to make recommendations on how to address them.
 
 # Deliverable
-* There are two deliverables: an in-tutorial demo to your TA, and a written component.
+* There are two deliverables: an in-tutorial demo to your TA, and a portfolio component on the GitHub site.
 * The in-tutorial demo will be scheduled by your TA. You will have 10 minutes to say what your project is (briefly), and to demo the core tasks of your system (consider using your storyboards and tasks from P2 as a guide). You will then need to respond to 5 minutes of questions.
-* On the due date for this project component, you will hand in your portfolio binder in lecture with a written report about your prototype and the results of your heuristic analysis. This written report should address:
-    * In about two physical pages, how the prototype was built, and the major components of the system. In another 4-6 physical pages, illustrate the interface components by using the tasks you designed in P1 as your guide. You should include small screenshots of the interface where appropriate. Where there is variance from these tasks, point them out, and justify the design changes.
-    * The results of your heuristic analysis should be written in 3-4 physical pages (maximum 6 pages). Identify a small set of major problems that must be fixed, and summarize these. Then, describe the issues that were identified, along with which heuristics were violated, and finally, how you would address them in another iteration. You can sort these in terms of severity, in terms of functional/conceptual area (i.e. in a way that makes sense with respect to your system), or in terms of each heuristic. Justify your choice for presentation, and make it clear that sort is being done in the written presentation. You may not have enough space for everything: this is fine, put the remainder in an appendix.
-* Include as an appendix the raw notes from your heuristic evaluation -- in particular, the notes from your individual heuristic evaluations.
+* On the due date for this project component, you will submit your GitHub site. This portfolio piece should contain the following:
+    * A link to the working demo
+    * Three "highlight" pieces of functionality (e.g. tasks), accompanied by either images (gifs?) and some text to explain how a user would use the system to accomplish the task.
+    * The results of your heuristic analysis, where you identify a small set of major problems that must be fixed, and summarize these. Then, describe the issues that were identified, along with which heuristics were violated, and finally, how you would address them in another iteration. You can sort these in terms of severity, in terms of functional/conceptual area (i.e. in a way that makes sense with respect to your system), or in terms of each heuristic. Justify your choice for presentation, and make it clear that sort is being done in the written presentation. You may not have enough space for everything: this is fine.
+    * Include as a set of images the raw notes from your heuristic evaluation -- in particular, the notes from your individual heuristic evaluations.
 
 ## Grading Sheet
 * Ensure that your grading sheet is placed in front of the section of this component.
 * Look on the [grading sheet page](project-grading-sheets.md) for the printable grading sheet.
 
 ## Resources
+* [Axure](https://axure.com)
 * [Heuristic Evaluations](http://www.useit.com/papers/heuristic/)
 * [How to Conduct an Heuristic Evaluation](http://www.useit.com/papers/heuristic/heuristic_evaluation.html)
 * [Nielsen's 10 Usability Heuristics](http://www.useit.com/papers/heuristic/heuristic_list.html)
