--- a/p4.md
+++ b/p4.md
@@ -13,7 +13,7 @@ Your presentation should present ideas at a very high level, and should cover th
 * What did you discover from your heuristic evaluation?
 * How would you address these in the next iteration of the design?
 
-Word provides several paragraph styles that will help with the professional look of your final report. I would suggest using styles such as "Title", "Heading 1", "Heading 2", "Normal", "Block Quote" and "Caption". You should organize your final report with the following headings (roughly):
+You should organize your final report with the following headings (roughly):
 
 * Executive Summary
 * Introduction
@@ -26,7 +26,7 @@ Word provides several paragraph styles that will help with the professional look
 
 ## Deliverable
 * **Final in-tutorial presentation (or showcase presentation).** This is a 10 minute presentation where you are to construct a powerpoint slide deck. Make sure that you use the pictures and images/scans of your sketches/ideas liberally. Do not go over time. At 11 minutes, your TA will abruptly end your presentation. You will also answer questions from your TA and labmates for 5 minutes. Note: this is expected to a PowerPoint presentation.
-* **Final report.** This document should essentially be a summary of the major components from the previous steps of your project, but the point is to present it professionally and succinctly. You will be given four physical pages to compile this report. You have a limit of 6 physical pages.
+* **Final report.** This write-up should essentially be a summary of the major components from the previous steps of your project, but the point is to present it professionally and succinctly. You will submit this on your GitHub portfolio.
 
 ## Grading Sheet
 * Ensure that your grading sheet is placed in front of the section of this component.
