FIX: a1.md YouTube links updated

--- a/a1.md
+++ b/a1.md
@@ -32,6 +32,7 @@ We will extract your code and run it looking to see if the design matches the sp
 Your job is to implement the design given in the solution video below, following the specifcations listed in the next section. 
 
 [](https://youtu.be/Dgcr1xbzUTw)
+[YouTube video](https://youtu.be/Dgcr1xbzUTw)
 
 ## Specifications
 
@@ -44,6 +45,7 @@ To match this solution you must have:
 ## Tutorial Video
 
 [](https://www.youtube.com/watch?v=ZG7Zbu2S6gM)
+[YouTube Video](https://www.youtube.com/watch?v=ZG7Zbu2S6gM)
 
 This tutorial video covers how to create a shell of a WPF project, and covers the basics on how to implement event handlers for various UI controls in WPF.
 
