FIX: p0.md Revised submission information

--- a/p0.md
+++ b/p0.md
@@ -14,8 +14,8 @@ Team contracts ensure that students on a team discuss what their expectations an
 
 ## Deliverable
 
-* Draft: Turn in your draft team contract proposal in your portfolio binder (1" to 1 1/2" binder). This should be handed in at the beginning of the class on the day it is due. As with assignments, you have a 10 minute window from the start of class -- handing it in after this 10 minute window will result in a grade of 0.
-* Revised: Turn in the final team contract proposal (signed by all members) in your portfolio binder.
+* Draft: Turn in your draft team contract proposal as a printed sheet of paper.
+* Revised: Turn in the final team contract proposal (signed by all members) by scanning each page of the contract, and posting it into your GitHub portfolio site.
 
 ## Grading Sheet
 This component is graded on completion. If it is unsatisfactory, it will be returned for revision.
