FEATURE: Git for 481 information (i.e. forking a repo) added

--- a/p1.md
+++ b/p1.md
@@ -13,7 +13,7 @@ Since this is a class project, you need not necessarily interview as many users 
 * **Identify and develop a set of task descriptions.** What will people use your system for? Develop these task descriptions in accordance to [task-centred design methodology](http://grouplab.cpsc.ucalgary.ca/grouplab/uploads/Publications/Publications/2004-TaskAnalysis.LEAChapter.pdf).
 
 ## Deliverable
-* You deliver this project component via your GitHub repo as a working webpage. This webpage should illustrate your methods using images and visuals captured during your user research.
+* You deliver this project component via your GitHub repo as a working webpage. This webpage should illustrate your methods using images and visuals captured during your user research. [How do I fork a GitHub repo?](github-for-481.md)
 * Provide the following: (a) a succinct description of your project idea, how you expect your system to be used, by whom, and the context under which you expect it to be used; (b) provide a list of stakeholders, and describe them as they relate to the design of the system; (c) discuss the user research methods you used, provide justification for them, and provide a summary of your findings from each of these methods; (d) reflect on your use of the methods -- what went well, what went poorly, and what would you do differently, and (e) provide 6-8 task descriptions of how you expect the system to be used.
 * As a very rough guideline, this assignment should result in a 2000 word document.
 * You should also provide links to any materials used in your user research to serve as **proof that you conducted the research methods**. Examples could include (but are not limited to): photos of you and your interviewee, interview questions, raw notes from observations, photos from ethnography, survey questions, etc. If appropriate, using images of these in your write-up would likely be a good idea.
@@ -32,6 +32,9 @@ Since this is a class project, you need not necessarily interview as many users 
 * Camera journal
 * Try it yourself
 * Empathy tools
+
+## Resources
+* [How do I fork a GitHub repo?](github-for-481.md) - You'll need to have at least one member of your team fork the GitHub repo so you can "submit" your project components.
 
 <!-- 
 ## Resources
