FEATURE: a2.md A2 assignment and tutorial posted

--- a/a2.md
+++ b/a2.md
@@ -1,28 +1,84 @@
-# A2: User-Centered Research
+# A2: Stopwatch and Timer
 
-Understanding users is a critical part in designing good tools. Many of the methods in HCI are built around the idea of trying to understand our users, to overcome our own biases and convictions. The reason we have so many methods is because each design problem is fundamentally different: different users, different usage contexts, different artefacts, and so forth.
+Build a stopwatch and timer that mimics how the Android's stopwatch and timer functionality works.
 
-In class, we covered some of the 51 IDEO methods. These were further separated into four categories: look, listen, try, and learn. While there is some overlap in these methods, the point is that they cover a wide gamut of potential methods that can be applied. In practice, where possible, you would apply multiple methods to gain insight into a design problem. This is called triangulation, and often you would conduct at least three methods to make sure you understand a problem (so you have three points of a triangle to draw from). For example, if you were designing a walker for one-legged individuals, you might conduct a contextual inquiry, along with a survey, along with empathy methods. These would give you a good understanding of the problem, and what would need to be designed.
+## Learning Objectives
 
-For this assignment, you will familiarize yourself with the IDEO methods, and practice selecting and justifying the choice of methods.
+By the end of this assignment, you will:
 
-## Deliverable
+* Implement a simple stopwatch and timer conforming to a design.
+* Practice developing UI elements (such as `TextBox` and `TabControl`) and event handling. 
+* Practice using the `Timers` class and some basic probelm solving. 
+* Practice development and debugging in the Visual Studio IDE.
+* Practice development with C# and WPF.
 
-You will deliver a written report.
+## Deliverable / Submission
 
-For each of the following three design problems, identify one method from each of the four IDEO categories (look, listen, try, and learn) that you could conduct to develop an understanding of the design problem and the users in it. That is, for each design problem, choose a total of four methods -- one from each of the IDEO categories. Ideally, the four methods you choose complement one another. Justify your choice of each method for the problem, and how the four methods you choose for that design problem could help triangulate a researcher's understanding.
+You will deliver a .zip file containing your source code into the Dropbox in D2L.
 
-* How should we design technology to allow people who are house-bound to explore the outdoors?
-* How should we design technology so that airplane mechanics can get a remote consult (e.g. from an expert)?
-* How can we design technology to provide ambient awareness of in-home energy usage?
+1. From the project directory, remove the `bin\` and `obj\` folders
+2. Zip up the solution directory, ensuring that all your source files are included
+3. Upload the zip file into the Dropbox in D2L by the deadline
 
-Your report should be roughly 3-4 physical pages long. Make sure to use headers to delineate the different sections of the report.
+We will extract your code and run it, looking to see if the desgin matches the specifications below.
 
-This report is to be single-spaced, double-sided. Use 12-pt Times font with 1" margin on all sides.
+## Steps
+
+1. Read through the documentation below and watch the solution video.
+2. Create a new C#/WPF application following the description. 
+3. Zip it up, and submit via D2L.
+
+## Description
+
+Your job is to implement the design given in the solution video below, following the specifcations listed in the next section. 
+
+([Here's a video of the solution](https://youtu.be/yk8tQS2PZa0))
+
+## Specifications
+
+To match this solution you must have:
+
+1. A tab controller with a tab for the Stopwatch view and a tab for the Timer view. 
+2. The Stopwatch view contains: 
+	a. A Label with the time counting up (just minutes and seconds are okay). 
+	b. A start/stop Button to start the stopwatch counter and stop it. 
+	c. A record Button that is enabled when the stop watch is running. This will record the current time as an item in a Listbox.
+	d. When the stopwatch has been stopped, the record button then turns into a Reset Button that erases the recorded time list and resets the stopwatch to 00:00
+3. The Timer view contains: 
+	a. A Label with the time counting down. 
+	b. Three Textboxes (with appropriate labels) for Hour, Minute and Seconds to set the Timer. 
+	c. A Start button to start the Timer's count down. When the start button is pressed the values from the Textboxes are applied to the timer and begins the timer's count down. 
+	d. When the timer is within 3 seconds, the font colour changes to red and back to black when it is complete. 
+
+## Tutorial Video
+
+([Tutorial 2 video](https://youtu.be/O2o0CBx2hto))
+
+This tutorial video covers how to create a small game in WPF, and covers hoe to use the Timers class and recaps event handling for UI elements.
+
+## Hints
+
+1. Take notes based on the requirements and specification above. Make your own shorthand that is easier to interpret for you (rather than having to read the whole text). A good idea for this class is to make a sketch of where the project is going. 
+2. Look through C# and WPF documentation for a better understanding on how to create UI applications in Visual Studio. Here are some tutorials you can browse through:
+	- https://www.codeproject.com/Articles/140611/WPF-Tutorial-Beginning
+	- http://www.wpf-tutorial.com
+	- https://www.tutorialspoint.com/wpf/wpf_hello_world.htm
+3. Work on the "normal" cases first before worrying about making your UI look the exact same. (Though, ultimately, make sure you adhere to the specification above!)
+4. You will likely need to capture `KeyUp` events from the `TextBox` controls.
+5. You will need to use the `TabControl` control (which puts in a tabbed pane, and two `TabItem` tabs inside). Inside each of the `TabItems`, you can replace the `Grid` with a `Canvas`, and continue onward.
+6. There are at least (five different timers in .NET)[https://stackoverflow.com/questions/10317088/why-there-are-5-versions-of-timer-classes-in-net]. Each has slightly different behaviour and semantics. The tuorial video shows the use of the `Sytsem.Timers.Timer`, which requires the use of an `Invoke` method to interact with the UI thread. An alternative is to use the `System.Windows.Threading.DispatchTimer`, which operates on the thread that it was called on. Using the `DispatchTimer` means you don't need to use the `Invoke` functionality.
 
 ## Grading Rubric
-The grading rubric for this assignment is here: [481-A2-grading-rubric.pdf](http://www.hcitang.org/uploads/Teaching/481-A2-grading-rubric.pdf)
 
-Print and staple this to the front of your assignment.
+You work will be graded on a 0, check-, check and check+ grade. 
 
-Your assignment is due at the beginning of lecture on the due date. You have a 10 minute grace period after the start of lecture. After this, no late assignments will be accepted.
+A check grade is awarded when all the specifications above have been met. 
+
+A check- grades is received when some requirements from the specifications are missing or implemented incorrectly. 
+
+A check+ grade can be recieved if you meet all the specifications and to the design or functionality (e.g. alarm clock functionality, or a really nice UI design, or alternately a "calculator-button" number entry mechanism) and implement it correctly. 
+
+## No Late Assignments
+
+Your assignment is due at noon on the specified due date. No late assignments will be accepted.
+
