--- a/a2.md
+++ b/a2.md
@@ -66,7 +66,7 @@ This tutorial video covers how to create a small game in WPF, and covers hoe to 
 3. Work on the "normal" cases first before worrying about making your UI look the exact same. (Though, ultimately, make sure you adhere to the specification above!)
 4. You will likely need to capture `KeyUp` events from the `TextBox` controls.
 5. You will need to use the `TabControl` control (which puts in a tabbed pane, and two `TabItem` tabs inside). Inside each of the `TabItems`, you can replace the `Grid` with a `Canvas`, and continue onward.
-6. There are at least (five different timers in .NET)[https://stackoverflow.com/questions/10317088/why-there-are-5-versions-of-timer-classes-in-net]. Each has slightly different behaviour and semantics. The tuorial video shows the use of the `Sytsem.Timers.Timer`, which requires the use of an `Invoke` method to interact with the UI thread. An alternative is to use the `System.Windows.Threading.DispatchTimer`, which operates on the thread that it was called on. Using the `DispatchTimer` means you don't need to use the `Invoke` functionality.
+6. There are at least [five different timers in .NET](https://stackoverflow.com/questions/10317088/why-there-are-5-versions-of-timer-classes-in-net). Each has slightly different behaviour and semantics. The tuorial video shows the use of the `Sytsem.Timers.Timer`, which requires the use of an `Invoke` method to interact with the UI thread. An alternative is to use the `System.Windows.Threading.DispatchTimer`, which operates on the thread that it was called on. Using the `DispatchTimer` means you don't need to use the `Invoke` functionality.
 
 ## Grading Rubric
 
