--- a/a2.md
+++ b/a2.md
@@ -68,6 +68,11 @@ This tutorial video covers how to create a small game in WPF, and covers hoe to 
 5. You will need to use the `TabControl` control (which puts in a tabbed pane, and two `TabItem` tabs inside). Inside each of the `TabItems`, you can replace the `Grid` with a `Canvas`, and continue onward.
 6. There are at least [five different timers in .NET](https://stackoverflow.com/questions/10317088/why-there-are-5-versions-of-timer-classes-in-net). Each has slightly different behaviour and semantics. The tuorial video shows the use of the `Sytsem.Timers.Timer`, which requires the use of an `Invoke` method to interact with the UI thread. An alternative is to use the `System.Windows.Threading.DispatchTimer`, which operates on the thread that it was called on. Using the `DispatchTimer` means you don't need to use the `Invoke` functionality.
 7. You may find either `Convert.ToInt32` or `Integer.Parse` useful. [Here's a StackOverflow response on what the difference is.](https://stackoverflow.com/questions/199470/whats-the-main-difference-between-int-parse-and-convert-toint32)
+8. If you run into an `InvalidOperation` error, you'll need to use the magic lines of code in your event handler (as articulated by Sydney in the tutorial video): 
+		Dispatcher.Invoke(new Action() => {
+			// your event handling code in here
+			...
+		});
 
 ## Grading Rubric
 
